--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 LATITUDE=30.0000
-LONGITUDE=-00.0000
-EMAIL_USER=something@gmail.com
+LONGITUDE=-90.0000
+EMAIL_USER=emailaddress@gmail.com
 EMAIL_PASS=somethingsecure
 IMAP_SERVER=imap.gmail.com
 IMAP_PORT=993
@@ -12,3 +12,24 @@ WEATHER_ALERT_INTERVAL_MINS=30
 WEATHER_UPDATE_INTERVAL_MINS=60
 FORECAST_MORNING_SEND_TIME=06:05
 FORECAST_AFTERNOON_SEND_TIME=18:05
+
+# --- SOS NOTIFICATION SETTINGS ---
+# Enable/disable email notifications for each SOS type. Set to True or False.
+SOS_EMAIL_ENABLED=True
+SOSM_EMAIL_ENABLED=False
+SOSF_EMAIL_ENABLED=False
+SOSP_EMAIL_ENABLED=True
+
+# Comma-separated list of email addresses to receive the notifications.
+SOS_EMAIL_RECIPIENTS=
+SOSM_EMAIL_RECIPIENTS=
+SOSF_EMAIL_RECIPIENTS=
+SOSP_EMAIL_RECIPIENTS=
+
+# --- SOS TIMERS & ESCALATION (in minutes) ---
+# Time to wait for a tagged responder to acknowledge an SOS before broadcasting the alert network-wide.
+SOS_ACK_TIMEOUT_MINS=5
+# How often to send a check-in ping to a user in an active SOS state.
+SOS_CHECKIN_INTERVAL_MINS=5
+# How many unanswered check-in pings to allow before escalating the alert to "UNRESPONSIVE".
+SOS_CHECKIN_MAX_ATTEMPTS=3
